Issue fix
Text on the search box was not showing up

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 .search{
-  color: #fff;
+  color: rgb(147, 32, 32);
   border: 1px solid #fff;
   border-radius: 5px 0 0 5px;
   position: relative;
